# poc-template

./: .gitignore  cookiecutter.json
{{cookiecutter.directory_name}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.directory_name}}/.streamlit/: config.toml
{{cookiecutter.directory_name}}/src/: {{cookiecutter.main_file}}.py
{{cookiecutter.directory_name}}/src/pages/: page_1.py
