[tool.poetry]
name = "{{cookiecutter-directory-name}}"
version = "0.1.0"
description = "This a tempalte"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
